// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Modal) rendering should render Modal component 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Component
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View>
      <View>
        <ScrollView>
          <Body
            key=".1"
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              body
            </Text>
          </Body>
        </ScrollView>
      </View>
    </View>
  </Component>
  <Trigger
    key=".0"
    onShowDialog={[Function]}
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        trigger
      </Text>
    </TouchableOpacity>
  </Trigger>
</View>
`;

exports[`(Modal) rendering should render Modal component with header 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Component
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View>
      <View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "borderBottomWidth": 0,
              "flexDirection": "row",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Icon
              family="MaterialCommunityIcons"
              name="close"
              size={20}
            />
          </TouchableOpacity>
        </View>
        <ScrollView>
          <Body
            key=".1"
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              body
            </Text>
          </Body>
        </ScrollView>
      </View>
    </View>
  </Component>
  <Trigger
    key=".0"
    onShowDialog={[Function]}
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        trigger
      </Text>
    </TouchableOpacity>
  </Trigger>
</View>
`;
